<resources>
    <string name="app_name">Quiz Time</string>


    <!-- Score Button -->
    <string name="score">score</string>

    <!-- Reset Button -->
    <string name="reset">reset</string>

    <!--questions and answer-->
    <string name="soon">Soon!</string>
    <string name="q1Math">How many balls?</string>
    <string name="nine">9</string>
    <string name="six">6</string>
    <string name="q2Math">How many Helicopters?</string>
    <string name="two">2</string>
    <string name="seven">7</string>
    <string name="three">3</string>
    <string name="q3Math">How many Books?</string>
    <string name="five">5</string>
    <string name="q4Math">How many girls you see?</string>
    <string name="four">4</string>
    <string name="your_name">Your Name!</string>
    <string name="your_score">,  Your Score</string>
    <string name="you_win">You Win :)</string>
    <string name="you_lose">You lose :(</string>
    <string name="science">Science</string>
    <string name="math">Math</string>
    <string name="programming">Programming</string>
    <string name="other">Other</string>
    <string name="name">Name</string>
    <string name="you_statue">You Statue :)</string>
    <string name="q1">Which of the following is a method having same name as that of its class?</string>
    <string name="q1_answer1">constructor</string>
    <string name="q1_answer2">class</string>
    <string name="q1_answer3">delete</string>
    <string name="q1_answer4">finalize</string>
    <string name="q2">Which of these access specifiers can be used for an interface?</string>
    <string name="q2_answer1">public</string>
    <string name="q2_answer2">private</string>
    <string name="q2_answer3">All of the mentioned</string>
    <string name="q2_answer4">protected</string>
    <string name="q3">Which of these method of Object class is used to obtain class of an object at run time?</string>
    <string name="q3_answer1">None of the mentioned</string>
    <string name="q3_answer2">class getclass()</string>
    <string name="q3_answer3">void getclass()</string>
    <string name="q4">Which operator is considered to be with highest precedence?</string>
    <string name="q4_answer1">+</string>
    <string name="q4_answer2">\?</string>
    <string name="q4_answer3">(),[]</string>
    <string name="q4_answer4">=</string>
    <string name="q5">According to you, what is Java?</string>
    <string name="q5_answer1">A mediator between you and your computer</string>
    <string name="q5_answer2">A video game console</string>
    <string name="q5_answer3">A programming language</string>
    <string name="q6">Which of the following returns a primitive data type?</string>
    <string name="q6_answer1">Integer.intValue()</string>
    <string name="q6_answer2">Integer.parseInt()</string>
    <string name="q6_answer3">Integer.getInteger()</string>
    <string name="q7">Which of the following are legal identifiers in Java?</string>
    <string name="q7_answer1">$while</string>
    <string name="q7_answer2">Abc_1</string>
    <string name="q7_answer3">1abc</string>
    <string name="q8">Which of the following are correct regarding method overriding?</string>
    <string name="q8_answer1">Same name different signature</string>
    <string name="q8_answer2">Both the methods must not be in the same class</string>
    <string name="q8_answer3">Same name same signature</string>
    <string name="q3_answer4">get()</string>
    <string name="user_pic">user pic</string>
    <string name="question1Img">The first question</string>
    <string name="question2Img">The second question</string>
    <string name="question3Img">The third question</string>
    <string name="question4Img">The fours question</string>
    <string name="four4">f…r</string>
    <string name="q6_math">Type this number?</string>
    <string name="question_6_number_700">question 6 number 700</string>
    <string name="type_the_number">type the number!</string>
    <string name="math_questions">math questions</string>
    <string name="science_questions">science questions</string>
    <string name="programming_questions">programming questions</string>
    <string name="general_questions">general questions</string>
    <string name="soon_questions">soon questions</string>
    <string name="user_statue_background">user Statue Background</string>
    <string name="q9">Type a new language name that will be used instead of Java</string>
    <string name="ko_n">Ko...n</string>
    <string name="q10">What is the best educational site in the world?</string>
    <string name="ud_y">ud....y</string>


</resources>
