<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questions">

    <!--bar with user name + profile pic-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timon"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/editText_name"
            android:layout_marginTop="4dp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
        <Button
            android:id="@+id/button"
            android:layout_marginTop="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            />

    </LinearLayout>

    <!--Questions Type-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="#fff"
        android:orientation="vertical">


        <!--Images Button (mathe+science)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/mathButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/unsmall"
                tools:ignore="NestedWeights" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/science" />

        </LinearLayout>

        <!--Images Button (programming+other)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/programming" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/other" />

        </LinearLayout>

        <!--Images Button (soon questions)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/soon" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/soon" />

        </LinearLayout>

    </LinearLayout>


    <!--text labels-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"

                android:layout_marginStart="30dp"
                android:layout_marginTop="90dp"
                android:layout_weight="1"

                android:maxLines="1"

                android:text="@string/math"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"

                android:layout_marginStart="30dp"
                android:layout_marginTop="90dp"
                android:layout_weight="1"

                android:maxLines="1"

                android:text="@string/science"
                android:textSize="35sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"

                android:layout_marginStart="27dp"
                android:layout_marginTop="90dp"
                android:layout_weight="1"

                android:maxLines="1"
                android:text="@string/programming"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"

                android:layout_marginStart="50dp"
                android:layout_marginTop="90dp"
                android:layout_weight="1"

                android:text="@string/other"
                android:textSize="35sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"

                android:layout_marginStart="50dp"
                android:layout_marginTop="90dp"
                android:layout_weight="1"

                android:text="@string/soon"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"

                android:layout_marginStart="50dp"
                android:layout_marginTop="90dp"
                android:layout_weight="1"

                android:text="@string/soon"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>